--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,11 @@ Runtime for the JUDO backend.
 
 Contains Guice and Spring modules used by JUDO. Starts off from ASM and Measure models.
 
+== Context
+
+This project is a building block of the https://github.com/BlackBeltTechnology/judo-community[judo-community] aggregator
+project. In order to better understand how this module fits into our ecosystem, please check the corresponding documentation!
+
 == Contributing to the project
 
 Everyone is welcome to contribute to JUDO! As a starter, please read the corresponding link:CONTRIBUTING.adoc[CONTRIBUTING] guide for details!
